src/features/user-stats/components/activity.module.css
.tooltip {
  position: relative;

  &:hover {
    filter: brightness(2);
  }

  &:hover + .tooltipContent,
  &:active + .tooltipContent,
  &:focus + .tooltipContent {
    opacity: 1;
  }

  & + .tooltipContent {
    top: 0;
    left: 0;
    white-space: nowrap;
    margin: 0 1rem;
    transition:
      opacity 0.1s ease-out,
      transform 0.1s ease-out;
    display: inline-block;
    padding: 1rem;
    font-size: 1.5rem;
    background-color: var(--c-foreground);
    color: var(--c-background);
    border-radius: 1rem;
    z-index: 2;
    min-width: 10rem;
  }
}

.calendarContainer {
  min-width: 25rem;
  max-width: 100%;
  grid-area: calendar;

  & :global(.react-activity-calendar.react-activity-calendar) {
    direction: rtl;
    min-width: 100%;
  }

  :global(.react-activity-calendar__calendar) {
    g > rect {
      /* fill: linear-gradient(#e66465, #9198e5); */
      /* fill: red; */
      /* &:after {
        content: ".";
      } */
    }
  }

  /* :global(.react-activity-calendar__legend-colors) {
    svg:nth-of-type(1) > rect {
      height: 2px !important;
      width: 2px !important;
    }
  } */

  /* NOTE: in progress */
  /* TODO: complete */
  svg > g:has(:global(.new-year)) {
    /* position: relative; */
    /* background-color: var(--c-foreground); */

    & > :global(.new-year) {
      /* &::after {
        content: attr(title);
        position: absolute;
        top: 0;
        left: 0;
        white-space: nowrap;
        margin: 0 1rem;
        transition:
          opacity 0.1s ease-out,
          transform 0.1s ease-out;
        opacity: 0;
        display: inline-block;
        padding: 1rem;
        font-size: 1.5rem;
        background-color: var(--c-foreground);
        color: var(--c-background);
        border-radius: 1rem;
        z-index: 2;
        min-width: 10rem;
      } */
    }
  }
}

.asciiSkeleton {
  font-family: var(--font-mono);
  white-space: pre;
  margin: 0;
}

